--- a/test_html/index.html
+++ b/test_html/index.html
@@ -6,8 +6,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  ...
-  <!-- Le reste du contenu -->
-  ...
+    <button onclick="location.href='{% url 'script' %}'">Execute Script </button>
+
 </body>
 </html>
